stylesheets/form.css
.form_flexbox {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  width: 45vw;
  height: 100vh;
  overflow-y: scroll;
}
@media only screen and (max-width: 992px) {
  .form_flexbox {
    width: 100vw;
    height: 60vh;
  }
}
@media only screen and (max-width: 451px) {
  .form_flexbox {
    width: 100vw;
    height: 70vh;
  }
}
@media only screen and (max-width: 992px) and (max-height: 700px) {
  .form_flexbox {
    justify-content: start;
    padding: 1rem;
  }
}
@media only screen and (max-height: 600px) {
  .form_flexbox {
    justify-content: start;
    padding: 1rem;
  }
}

.form_flexbox__item {
  width: 70%;
  min-height: 30rem;
  height: auto;
  border-radius: 1rem;
  padding: clamp(0.25rem, 2vw, 2rem);
  background: rgb(255, 255, 255, 1);
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  border: 3px solid #7fff00;
}
@media only screen and (max-height: 700px) {
  .form_flexbox__item {
    min-height: 30rem;
  }
}
@media only screen and (max-width: 451px) {
  .form_flexbox__item {
    width: 90%;
    min-height: 20rem;
  }
}

.form_comment_img {
  width: 100%;
  height: 5rem;
  margin: 0 auto;
}
@media only screen and (max-width: 451px) {
  .form_comment_img {
    height: 3rem;
  }
}

.form__h2 {
  font-weight: 700;
  font-size: clamp(1.2rem, 5vw, 2.2rem);
  text-align: center;
  margin: 0rem auto;
  color: #0096f0;
}
@media only screen and (max-width: 992px), screen and (max-height: 700px) {
  .form__h2 {
    font-size: 1.2rem;
  }
}

.form_input__container {
  position: relative;
  margin: 1.5rem auto;
}
@media only screen and (max-width: 992px) {
  .form_input__container {
    margin: 0.25rem auto;
  }
}

.form_input__label {
  position: relative;
  display: inline-block;
  color: black;
  height: 1.5rem;
  padding: 0.2rem 0.1rem;
  font-weight: 700;
}
@media only screen and (max-width: 992px) {
  .form_input__label {
    font-size: 1rem;
  }
}

.form_input__error {
  position: absolute;
  display: block;
  top: 4.5rem;
  width: 100%;
  color: red;
  font-size: 0.9rem;
  text-align: center;
  z-index: 1;
}

.form__error_p {
  display: block;
}
@media only screen and (max-width: 992px), screen and (max-height: 700px) {
  .form__error_p {
    display: none;
  }
}

.form_text_area_error {
  top: 10.5rem;
}

.form_input__text {
  position: relative;
  display: block;
  border: none;
  width: 100%;
  height: 3rem;
  padding: 0.5rem;
  font-size: 1.2rem;
  background: #e5e9ed;
}
@media only screen and (max-width: 451px), screen and (max-height: 700px) {
  .form_input__text {
    height: 1.8rem;
  }
}

textarea {
  resize: none;
}

.form_input_comment {
  position: relative;
  display: block;
  border: none;
  width: 100%;
  height: 9rem;
  font-size: 1.2rem;
  background: #e5e9ed;
}
@media only screen and (max-width: 992px) {
  .form_input_comment {
    height: 5rem;
  }
}
@media only screen and (max-width: 451px), screen and (max-height: 700px) {
  .form_input_comment {
    height: 3rem;
  }
}

.form__submit_button {
  display: block;
  text-align: center;
  height: 3rem;
  width: 100%;
  margin: 3rem auto;
  font-size: 1.2rem;
  font-weight: 700;
  color: white;
  background: #0096f0;
  border: none;
}
@media only screen and (max-width: 992px) {
  .form__submit_button {
    margin: 1rem auto;
    width: 6rem;
  }
}
@media only screen and (max-width: 451px), screen and (max-height: 700px) {
  .form__submit_button {
    margin: 1rem auto;
    height: 2rem;
    width: 6rem;
  }
}

.form__char_count {
  float: right;
}

